--- a/index.html
+++ b/index.html
@@ -3,11 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"><!--Estilo da fonte-->
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <header> <!--Início header-->
+        <div class="logo-container">
+            <img src="img/logo.svg" alt="Logo">
+            <h4 class="logo">Three Dots</h4>
+        </div>
+        <nav> <!--inicio barra de navegação-->
+           <ul class="nav-links">
+                <li><a class="nav-link" href="#">Specs</a></li>
+                <li><a class="nav-link" href="#">Products</a></li>
+                <li><a class="nav-link" href="#">Contact</a></li>
+
+
+           </ul> 
+        </nav><!--fim barra de navegação-->
+        <div class="cart">
+            <img src="./img/cart.svg" alt="cart">
+        </div>
+    </header> <!--fim header-->
+
+    <main> <!--inicio main-->
+    <section class="presentation">
+        <div class="introduction">
+            <div class="intro-text">
+                <h1>Laptop for the future</h1>
+                <p>
+                    The new 14 inch bezeless display oferring a 4k 
+                    display with touch screen
+                    
+                </p>
+            </div>
+            <div class="cta"> <!--início configurações botões-->
+                <button class="cta-select">14 Inch</button>
+                <button class="cta-add">Add to Cart</button>
+            </div> <!--fim configurações botões-->
+        </div>
+        <div class="cover">
+            <img src="./img/matebook.png" alt="Matebook">
+        </div>
+    </section>
+    </main> <!--fim main-->
 </body>
 </html>
